fix password help icon alignment

--- a/customize.dist/src/less2/include/modals-ui-elements.less
+++ b/customize.dist/src/less2/include/modals-ui-elements.less
@@ -31,7 +31,7 @@
 
     // teams invite modal
     .cp-teams-invite-block {
-        display: inline-flex;
+        display: flex;
         align-items: center;
         margin-bottom: 5px;
         span {
@@ -52,7 +52,8 @@
     }
     .cp-teams-help {
         color: @colortheme_logo-2;
-        margin-left: 10px;
+        text-align: center;
+        width: 30px;
         &:hover {
             text-decoration: none;
         }
